hphp/test/zend/good/tests/classes/interface_class.php.expectf

Fatal error: derived cannot implement base - it is not an interface in %s/interface_class.php on line 5
